--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -45,6 +45,7 @@
         <button type="submit">Sign up</button>
       </form>
       <p>Have an account? <a href="/login">Log in here</a></p>
+      <p><a href="/">Home</a></p>
     </main>
   </body>
 </html>
