--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,14 +20,14 @@
         <% } %>
         <div>
           <label for="password">Password: *</label>
-          <input type="password" name="password" id="password" required />
+          <input type="password" name="password" id="password" required  autocomplete="off"/>
         </div>
         <% if (locals.errors && errors.find(error => error.path === 'password')) { %>
           <p class="error"><%= errors.find(error => error.path === 'password').msg %></p>
         <% } %>
         <button type="submit">Log in</button>
       </form>
-      <% if (authMessages) { %>
+      <% if (locals.authMessages) { %>
         <p class="error"><%= authMessages[authMessages.length - 1] %></p>
       <% } %>
       <p>Don&#39;t have an account? <a href="/signup">Create one here</a></p>
