Add member pass-code to member page

--- a/views/member.ejs
+++ b/views/member.ejs
@@ -25,6 +25,7 @@
           <% } %>
           <button type="submit">Enter the passcode</button>
         </form>
+        <p>Hint: the member pass-code is member123</p>
       <% } else if (user.role === 'member'){ %>
         <p>You are already authorized as a member</p>
         <p><a href="/">Home</a></p>
